--- a/Bookstore/Pages/_Layout.cshtml
+++ b/Bookstore/Pages/_Layout.cshtml
@@ -21,14 +21,8 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <h1 class="text-center my-4">Book Catalog</h1>
-            <div class="row">
-                <div class="col-2">
-                    <vc:category></vc:category>
-                </div>
-                <div class="col">
-                    @RenderBody()
-                </div>
+            <div class="container">
+                @RenderBody()
             </div>
         </main>
     </div>
