--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index" asp-route-category="" asp-route-pageNum="">Bookstore</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="row w-100">
+                    <a class="col-6 navbar-brand text-left" asp-controller="Home" asp-action="Index" asp-route-category="" asp-route-pageNum="">Bookstore</a>
+                    <a class="col text-right">
+                        <vc:cart-summary />
+                    </a>
+                </div>
             </div>
         </nav>
     </header>
