--- a/Bookstore/Views/_ViewImports.cshtml
+++ b/Bookstore/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using Bookstore.Models
 @using Bookstore.Models.ViewModels
 @using Bookstore.Infrastructure
+@using System.Globalization
+@using System.Threading
 
