--- a/Bookstore/Pages/Admin/Editor.razor
+++ b/Bookstore/Pages/Admin/Editor.razor
@@ -7,7 +7,7 @@
 </style>
 
 
-<h3 class="bg-dark text-white text-center rounded p-3">@TitleText Book</h3>
+<h3 class="bg-light rounded p-3" style="border: solid gray 1px;">@TitleText Book</h3>
 
 
 <EditForm Model="b" OnValidSubmit="SaveBook">
