--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -11,11 +11,9 @@
     <header>
         <nav class="navbar navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <div class="row w-100">
+                <div class="row w-100 align-items-center">
                     <a class="col-6 navbar-brand text-left" asp-controller="Home" asp-action="Index" asp-route-category="" asp-route-pageNum="">Bookstore</a>
-                    <a class="col text-right">
-                        <vc:cart-summary />
-                    </a>
+                    <a class="col text-right"><vc:cart-summary /></a>
                 </div>
             </div>
         </nav>
