--- a/Bookstore/Pages/Admin/AdminLayout.razor
+++ b/Bookstore/Pages/Admin/AdminLayout.razor
@@ -3,8 +3,15 @@
     Thread.CurrentThread.CurrentCulture = new CultureInfo("es-US");
 }
 
-<div class="bg-info rounded text-white p-2 pl-4">
-    <span class="navbar-brand">Admin View</span>
+<div class="bg-info rounded text-white p-2 px-4">
+    <div class="row align-items-center">
+        <div class="col">
+            <span class="navbar-brand">Admin View</span>
+        </div>
+        <div class="col">
+            <a class="btn btn-dark btn-sm float-right" href="/account/logout">Log Out</a>
+        </div>
+    </div>
 </div>
 
 <div class="container mt-3">
