--- a/Bookstore/Pages/Admin/Details.razor
+++ b/Bookstore/Pages/Admin/Details.razor
@@ -1,6 +1,6 @@
 ﻿@page "/admin/books/details/{id:long}"
 
-<h3 class="bg-dark rounded text-white text-center p-3">Details</h3>
+<h3 class="bg-light rounded p-3" style="border: solid gray 1px;">Details</h3>
 
 <table class="table table-sm table-bordered table-striped">
     <tbody>
