--- a/Bookstore/Views/Shared/Components/CartSummary/Default.cshtml
+++ b/Bookstore/Views/Shared/Components/CartSummary/Default.cshtml
@@ -4,18 +4,20 @@
 
 @model Cart
 
-<div class="">
+<div class="d-flex align-items-center">
     @if (Model.Items.Count() > 0)
     {
-        <small class="navbar-text">
+        <small class="navbar-text mx-0 px-0">
             <b>Your Cart:</b>
             @Model.Items.Sum(x => x.Quantity) Item(s)
             @Model.CalculateTotalPrice().ToString("C")
         </small>
     }
-    <a class="btn btn-sm navbar-btn" asp-page="/cart" asp-route-returnurl="@ViewContext.HttpContext.Request.PathAndQuery()">
+    <a class="ml-0 pl-0 btn btn-sm navbar-btn d-inline" asp-page="/cart" asp-route-returnurl="@ViewContext.HttpContext.Request.PathAndQuery()">
         <i>
             <img src="/img/shopping_cart.svg" style="filter: invert(1);" />
         </i>
     </a>
+    <div class="d-inline text-light mx-2">|</div>
+    <a class="btn btn-sm navbar-btn d-inline text-white" href="/admin">Admin</a>
 </div>
